<resources>
    <string name="app_name">quickCashApp</string>
    <string name="set_preference">Set Preference</string>
    <string name="available_jobs">Available Jobs</string>
    <string name="employee">Employee</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="choose_role">Choose role</string>
    <string name="job_post">Job Post</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="employer">Employer</string>
    <string name="Employee">Employee</string>
    <string name="map">MAP</string>
    <string name="todo">TODO</string>
    <string name="role_switch">ROLE SWITCH</string>
    <string name="TODO">TODO</string>
    <string name="preferred_employee">PREFERRED EMPLOYEE</string>
    <string name="Todo">TODO</string>
    <string name="Job_post">JOB POST</string>
    <string name="ToDo">TODO</string>
    <string name="payment">PAYMENT</string>
    <string name="TODo">TODO</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="EMAIL">Email</string>
    <string name="Password">Password</string>
    <string name="credit_card">Credit Card</string>
    <string name="register">Register</string>
    <string name="Payment">Payment</string>
    <string name="Preferred_employee">preferred employee</string>
    <string name="MAp">Map</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="ToDO">TODO</string>
    <string name="employer_dashboard">EMPLOYER DASHBOARD</string>
    <string name="name">Name</string>
    <string name="t">TODO</string>
    <string name="enter_job_type">Enter job type</string>
    <string name="enter_salary_range">Enter salary range</string>
    <string name="save_preferences">Save Preferences</string>
    <string name="enter_job_location" />
    <string name="Enter_job_location" />
    <string name="enterJobLocation">Enter job location</string>
    <string name="Save_preferences">save_preferences</string>
    <string name="please_enter_job_location">Please enter job location</string>
    <string name="please_enter_expected_duration">Please enter expected duration</string>
    <string name="please_enter_salary_range">Please enter salary range</string>
    <string name="please_enter_job_title">Please enter job title</string>
    <string name="job_type_hint">job_type_hint</string>
    <string name="location_hint">location_hint</string>
    <string name="locationhint" />
    <string name="jobtype">jobtype</string>
    <string name="Locationhint">locationhint</string>
</resources>