<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="132dp"
        android:contentDescription="@string/ToDO"
        app:layout_constraintBottom_toTopOf="@+id/profile_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/profile_description"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:layout_marginBottom="135dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/profile_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        tools:ignore="LabelFor" />

    <RatingBar
        android:id="@+id/profile_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="136dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_description" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="349dp"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="140dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/profile_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>